# flutter_packages

./: .gitmodules  README.md
video_player_windows/: AUTHORS  LICENSE  README.md  pubspec.yaml
video_player_windows/example/: README.md  pubspec.yaml
video_player_windows/example/lib/: main.dart
video_player_windows/example/windows/: CMakeLists.txt
video_player_windows/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
video_player_windows/example/windows/runner/: Runner.rc  main.cpp
video_player_windows/lib/: video_player_windows.dart
video_player_windows/windows/: CMakeLists.txt  messages.cpp  util.cpp  video_player_stream_handler.cpp  video_player_texture.cpp  video_player_windows_plugin.cpp
video_player_windows/windows/include/video_player_windows/: frame.h  logging.h  messages.h  util.h  video_player_stream_handler.h  video_player_texture.h  video_player_windows_plugin.h
